--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Pacifico&amp;subset=latin-ext" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/lightgallery.css">
-	<link rel="stylesheet" href="css/focus.css">
 
 	<link rel="stylesheet" href="css/article.css">
 	<link rel="stylesheet" href="css/bar.css">
@@ -40,6 +39,7 @@
 	<header id="nav-bar" class="nav-fixed">
 		<nav class="nav-fixed__flex wrapper">
 			<a class="logo" href="#">Cahee</a>
+			<a id="hamburger" href="" class="nav-fixed__hamburger"><span></span></a>
 			<ul id="main-nav" class="nav-fixed__ul">
 				<li class="nav-fixed__li"><a class="nav-fixed__a" href="#home">home</a></li>
 				<li class="nav-fixed__li"><a class="nav-fixed__a" href="#about">about</a></li>
@@ -48,7 +48,7 @@
 				<li class="nav-fixed__li"><a class="nav-fixed__a" href="#blog">blog</a></li>
 				<li class="nav-fixed__li"><a class="nav-fixed__a" href="#contact">contact</a></li>
 			</ul>
-			<a id="hamburger" href="" class="nav-fixed__hamburger"><span></span></a>
+			
 
 			<img id="scroll" src="img/scroll.png" alt="" class="scroll-fixed">
 		</nav>
@@ -108,7 +108,7 @@
 		</div>
 	</section>
 
-	<section id="services" class="t-sky" name="services">
+	<section id="services" class="t-sky">
 		<div class="wrapper">
 			<article class="article article--space">
 				<div class="wrapper__grid">
