--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
 <body class="page text">
 
-	<header id="nav-bar" class="nav-fixed">
-		<nav class="nav-fixed__flex wrapper">
+	<nav id="nav-bar" class="nav-fixed">
+		<div class="nav-fixed__flex wrapper">
 			<a class="logo" href="#">Cahee</a>
 			<a id="hamburger" href="" class="nav-fixed__hamburger"><span></span></a>
 			<ul id="main-nav" class="nav-fixed__ul">
@@ -51,13 +51,13 @@
 			
 
 			<img id="scroll" src="img/scroll.png" alt="" class="scroll-fixed">
-		</nav>
-	</header>
+		</div>
+	</nav>
 
 
 
 
-	<section id="home" class="t-strawberry">
+	<header id="home" class="t-strawberry">
 		<div class="wrapper">
 			<article class="article article--full article--space article--group">
 				<div class="article__text article__text--short">
@@ -72,7 +72,7 @@
 				<button class="article__item button button--orange">GET FREE NOW</button>
 			</article>
 		</div>
-	</section>
+	</header>
 
 	<section id="about" class="t-cyan">
 		<div class="wrapper">
