--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<link rel="stylesheet" href="css/wrapper.css">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
 </head>
 
 <body class="page text">
